<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <!-- TOOLBAR -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/app_name" />


    <RelativeLayout
        android:id="@+id/mainContent"
        android:background="@drawable/fondoquiz"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/btnStart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:clickable="true"
            android:focusable="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/boton_comenzar"/>

    </RelativeLayout>
    <!-- Botón Ajustes (abajo izquierda) -->
    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:contentDescription="@string/ajustes"
        android:src="@drawable/configuraciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Botón Ayuda (abajo derecha) -->
    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:contentDescription="@string/ayuda"
        android:src="@drawable/informacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>