<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.GameActivity">

    <!-- TOOLBAR -->
    <include layout="@layout/toolbar" />

    <!-- Zona superior: puntuación -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"

        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvLabelScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuaci_n"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="?attr/textAppearanceTitleSmall"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceTitleSmall"/>

            <!-- MENSAJE Acierto o fallo-->
            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text=""
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:paddingEnd="8dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Zona central: contenedor de preguntas -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/questionHost"
        android:name="com.example.practica2.ui.QuestionFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.7"

        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintVertical_bias="0.5"
        tools:layout="@layout/fragment_question" />


    <!-- Zona inferior: acciones globales -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                style="@style/Widget.MyApp.Button.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/volver"
                app:icon="@drawable/ic_arrow_back_24"
                app:iconPadding="8dp"
                app:iconGravity="textStart"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                style="@style/Widget.MyApp.Button.Filled"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/siguiente"
                android:enabled="false"
                app:icon="@drawable/ic_arrow_forward_24"
                app:iconPadding="8dp"
                app:iconGravity="textEnd"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
